fix: remove overflow hidden

--- a/js/src/chat/chat-tools.scss
+++ b/js/src/chat/chat-tools.scss
@@ -64,7 +64,6 @@ shiny-tool-result {
 
     > .card-body {
       transition: max-height 0.3s ease-out, opacity 0.2s ease-out;
-      overflow: hidden;
       opacity: 1;
 
       &.collapsed {
